[package]
name = "zclib"
version = "0.1.1"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
edition = "2018"
categories = ["command-line-utilities", "compression"]
keywords = ["zlib", "deflate"]
description = "Zlib command line interface"
license = "MIT"
repository = "https://github.com/reu/zclib"

[dependencies]
clap = "2.33"
flate2 = "1.0"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
